name:                kautz
version:             0.1.0.0
synopsis:            Short description of your package
homepage:            https://github.com/githubuser/kautz#readme
license:             BSD3
license-file:        LICENSE
author:              Nick Van den Broeck
maintainer:          nick.van.den.broeck666@gmail.com
copyright:           2017 Nick Van den Broeck
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

description:         Implementation of a P2P Kautz graph network

library
  hs-source-dirs:      src
  exposed-modules:     Kautz
                       Kautz.OptParse
                       Kautz.StartServer
                       Kautz.AddNote
                       Kautz.JSONUtils
                       Import
  build-depends:       base >= 4.7 && < 5,
                       validity >=0.4 && <0.5,
                       bytestring >=0.10.8 && <0.11,
                       text >=1.2 && <1.3,
                       path >=0.5 && <0.6,
                       network >=2.6 && <2.7,
                       network-simple >=0.4 && <0.5,
                       containers >=0.5 && <0.6,
                       mtl >=2.2 && <2.3,
                       aeson >=1.0 && <1.2,
                       aeson-pretty >=0.8 && <0.9,
                       QuickCheck >=2.9 && <2.11,
                       path-io >=1.2 && <1.3
  default-language:    Haskell2010

executable kautz
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       kautz,
                       network-transport >=0.4.4 && <0.5,
                       network-transport-inmemory >=0.5 && <0.6
  default-language:    Haskell2010

test-suite kautz-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       kautz
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/kautz
